--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.12.1",
     "lucide-react": "^0.511.0",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
@@ -51,6 +52,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.15.19",
+    "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react": "^4.4.1",
     "@vitejs/plugin-react-swc": "^3.9.0",
     "autoprefixer": "^10.4.21",
