--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "sonner": "^2.0.3",
+    "swiper": "^11.2.8",
     "tailwind-merge": "^3.3.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
