--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@tanstack/react-query": "^5.76.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@use-gesture/core": "^10.3.1",
+    "@use-gesture/react": "^10.3.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.12.1",
+    "framer-motion": "^12.12.2",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.511.0",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
